Implemented Contact, about and some modifications to all pages.

--- a/certificates.html
+++ b/certificates.html
@@ -28,34 +28,36 @@
     <h1><center>Certificates</center></h1>
 </div>
 
-
-
 <div class="Certificates-container">
     <div class="certificate">
         <span class="title">Intro to Cloud Computing</span>
         <img src="assets/certificates/Cloud.png" alt="certificate">
-        <a href="https://www.coursera.org/account/accomplishments/verify/1IWHCKSL8RW8">
+        <a href="https://www.coursera.org/account/accomplishments/verify/1IWHCKSL8RW8" target="_blank">
             <button class="btn" type="button">Verify</button>
         </a>
     </div>
     <div class="certificate">
-        <span class="title"> Intro to DevOps</span>
+        <span class="title">Intro to DevOps</span>
         <img src="assets/certificates/DevOps.png" alt="certificate">
-        <a href="https://www.coursera.org/account/accomplishments/verify/Y9T36FYI25UK">
+        <a href="https://www.coursera.org/account/accomplishments/verify/Y9T36FYI25UK" target="_blank">
             <button class="btn" type="button">Verify</button>
         </a>
     </div>
     <div class="certificate">
-        <span class="title">QT6 Core </span>
+        <span class="title">Qt 6 Core</span>
         <img src="assets/certificates/Qt.png" alt="certificate">
-        <a href="https://www.udemy.com/certificate/UC-8d5d5826-0b59-4607-8c46-2741fd548457/">
+        <a href="https://www.udemy.com/certificate/UC-8d5d5826-0b59-4607-8c46-2741fd548457/" target="_blank">
             <button class="btn" type="button">Verify</button>
         </a>
-    </div>           
+    </div> 
+    <div class="certificate">
+        <span class="title">Technical Support Fundamentals</span>
+        <img src="assets/certificates/IT.png" alt="certificate">
+        <a href="http://coursera.org/account/accomplishments/verify/Y2YMUMDHAXGV" target="_blank">
+            <button class="btn" type="button">Verify</button>
+        </a>
+    </div>             
 </div>
-
-
-
 
     <script src="assets/js/index.js"></script>
 </body>
