--- a/index.html
+++ b/index.html
@@ -29,48 +29,88 @@
 </div>
 <div class="subheader">
     <center>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-        <p> Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+        <h2>I'm Sagar Rai</h2>
+        <p>I am a computer science student with a passion for software engineering, always eager to learn and grow in my field.</p>
     </center>
 </div>
 <div class="logo-container">
     <div class="newline">
         <center>
             <h1>Comfortable Using</h1>
-                <span class="logo-title">C++</span>
-                <img src="assets/images/cpplogo.svg" alt="Logo">
-                <span class="logo-title">CMake</span>
-                <img src="assets/images/cmake.svg" alt="Logo">
-                <span class="logo-title">QT</span>
-                <img src="assets/images/qt.png" alt="Logo">
+                <div class="logo-item">
+                    <span class="logo-title">C++</span>
+                    <a href="https://cplusplus.com" target="_blank">
+                        <img src="assets/images/cpplogo.svg" alt="C++ Logo">
+                    </a>
+                </div>
+                <div class="logo-item">
+                    <span class="logo-title">CMake</span>
+                    <a href="https://cmake.org" target="_blank">
+                        <img src="assets/images/cmake.svg" alt="CMake Logo">
+                    </a>
+                </div>
+                <div class="logo-item">
+                    <span class="logo-title">QT</span>
+                    <a href="https://qt.io" target="_blank">
+                        <img src="assets/images/qt.png" alt="QT Logo">
+                    </a>
+                </div>
+                <div class="logo-item">
+                    <span class="logo-title">GitHub</span>
+                    <a href="https://github.com/" target="_blank">
+                        <img src="assets/images/github.svg" alt="C++ Logo">
+                    </a>
+                </div>
             </center>
     </div>
     <div class="newline">
         <center>
             <h1>Somewhat Knowledge</h1>
-                <span class="logo-title">HTML</span>
-                <img src="assets/images/html.svg" alt="Logo">
-                <span class="logo-title">CSS</span>
-                <img src="assets/images/css.svg" alt="Logo">
-                <span class="logo-title">JS</span>
-                <img src="assets/images/js.svg" alt="Logo">
+                <div class="logo-item">
+                    <span class="logo-title">HTML</span>
+                    <a href="https://html.com" target="_blank">
+                        <img src="assets/images/html.svg" alt="HTML Logo">
+                    </a>
+                </div>
+                <div class="logo-item">
+                    <span class="logo-title">CSS</span>
+                    <a href="https://css-tricks.com" target="_blank">
+                        <img src="assets/images/css.svg" alt="CSS Logo">
+                    </a>
+                </div>
+                <div class="logo-item">
+                    <span class="logo-title">JS</span>
+                    <a href="https://javascript.com" target="_blank">
+                        <img src="assets/images/js.svg" alt="JS Logo">
+                    </a>
+                </div>
         </center>
     </div>
     <div class="newline">
         <center>
-            <h1>Interested in Learning</h1>
-                <span class="logo-title">Python</span>
-                <img src="assets/images/python.svg" alt="Logo">
-                <span class="logo-title">Java</span>
-                <img src="assets/images/java.svg" alt="Logo">
-                <span class="logo-title">MySql</span>
-                <img src="assets/images/mysql.svg" alt="Logo">
+            <h1>Technologies I am Learning/Interested In</h1>
+                <div class="logo-item">
+                    <span class="logo-title">Python</span>
+                    <a href="https://python.org" target="_blank">
+                        <img src="assets/images/python.svg" alt="Python Logo">
+                    </a>
+                </div>
+                <div class="logo-item">
+                    <span class="logo-title">Java</span>
+                    <a href="https://java.com" target="_blank">
+                        <img src="assets/images/java.svg" alt="Java Logo">
+                    </a>
+                </div>
+                
+                <div class="logo-item">
+                    <span class="logo-title">MySql</span>
+                    <a href="https://mysql.com" target="_blank">
+                        <img src="assets/images/mysql.svg" alt="MySQL Logo">
+                    </a>
+                </div>
         </center>
     </div>
 </div>
-
-
-
 
     <script src="assets/js/index.js"></script>
 </body>
