--- a/about.html
+++ b/about.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>My Portfolio</title>
+    <title>About Me</title>
     <link rel="stylesheet" href="assets/css/style.css">
 </head>
 <div class="navbar">
@@ -23,8 +23,51 @@
 
 <body>
 
-<!--Content go here-->
+<div class="about-container">
+    <h1>About Me</h1>
+    <div class="about-content">
+        <div class="about-image">
+            <img src="assets/images/Me.png" alt="Profile Picture">
+        </div>
+        <div class="about-text">
+            <p>Hello! I'm Sagar Rai, computer science student with a passion for software engineering. I have completed several certifications to enhance my skills and knowledge in these areas.</p>
+            <p>I am currently a computer science student at Quinsigamond Community College (QCC), where I am furthering my education and gaining valuable experience in the field of computer science.</p>
+            <p>I enjoy working on challenging projects and continuously learning new technologies to stay updated with the latest trends in the industry. My goal is to contribute to innovative projects that make a positive impact on society.</p>
+            <p>Feel free to explore my portfolio and reach out to me through the contact page. I'm always open to discussing new opportunities and collaborations.</p>
+        </div>
+    </div>
+</div>
 
+<br><br><br>
+<div class="contact-container">
+    <h1>Best Way to Contact Me</h1><br><br>
+    <div class="center-icons">
+        <div class="icon-container">
+            <a href="https:/discordapp.com/users/1148971024558342296" target="_blank">
+                <img src="assets/images/discord.png" alt="Discord Logo">
+            </a>
+            <span class="icon">Discord</span>
+        </div>
+        <div class="icon-container">
+            <a href="https://www.instagram.com/oceanrai12?igsh=c2Rwc3dvMGxkNXZp&utm_source=qr" target="_blank">
+                <img src="assets/images/instagram.png" alt="Instagram Logo">
+            </a>
+            <span class="icon">Instagram</span>
+        </div>
+        <div class="icon-container">
+            <a href="https://www.linkedin.com/in/sagar-rai/" target="_blank">
+                <img src="assets/images/linkedin.png" alt="LinkedIn Logo">
+            </a>
+            <span class="icon">LinkedIn</span>
+        </div>
+        <div class="icon-container github-icon">
+            <a href="https://github.com/CODEw0CEAN" target="_blank">
+                <img src="assets/images/github (1).svg" alt="GitHub Logo">
+            </a>
+            <span class="icon">GitHub</span>
+        </div>
+    </div>
+</div>
 
 
     <script src="assets/js/index.js"></script>
