Added certificate and .gitignore file

--- a/certificates.html
+++ b/certificates.html
@@ -51,6 +51,13 @@
         </a>
     </div> 
     <div class="certificate">
+        <span class="title">Introduction to Software Engineering</span>
+        <img src="assets/certificates/SoftwareEngineering.png" alt="certificate">
+        <a href="https://www.coursera.org/account/accomplishments/verify/ERFEIRDT41HC" target="_blank">
+            <button class="btn" type="button">Verify</button>
+        </a>
+    </div>  
+    <div class="certificate">
         <span class="title">Technical Support Fundamentals</span>
         <img src="assets/certificates/IT.png" alt="certificate">
         <a href="http://coursera.org/account/accomplishments/verify/Y2YMUMDHAXGV" target="_blank">
