Ignore .DS_Store

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <a href="index.html">Home</a>
         <a href="certificates.html">Certificates</a>
         <a href="contact.html">Contact</a>
-        <a href="about.html">About</a> <!--Add linkdln-->
+        <a href="about.html">About</a> 
     </div>
 </div>
 
@@ -39,26 +39,27 @@
             <h1>Comfortable Using</h1>
                 <div class="logo-item">
                     <span class="logo-title">C++</span>
-                    <a href="https://cplusplus.com" target="_blank">
                         <img src="assets/images/cpplogo.svg" alt="C++ Logo">
                     </a>
                 </div>
                 <div class="logo-item">
                     <span class="logo-title">CMake</span>
-                    <a href="https://cmake.org" target="_blank">
                         <img src="assets/images/cmake.svg" alt="CMake Logo">
                     </a>
                 </div>
                 <div class="logo-item">
                     <span class="logo-title">QT</span>
-                    <a href="https://qt.io" target="_blank">
                         <img src="assets/images/qt.png" alt="QT Logo">
                     </a>
                 </div>
                 <div class="logo-item">
                     <span class="logo-title">GitHub</span>
-                    <a href="https://github.com/" target="_blank">
-                        <img src="assets/images/github.svg" alt="C++ Logo">
+                        <img src="assets/images/github.svg" alt="GitHub Logo">
+                    </a>
+                </div>
+                <div class="logo-item">
+                    <span class="logo-title">Git</span>
+                        <img src="assets/images/git.svg" alt="Git Logo">
                     </a>
                 </div>
             </center>
@@ -68,19 +69,16 @@
             <h1>Somewhat Knowledge</h1>
                 <div class="logo-item">
                     <span class="logo-title">HTML</span>
-                    <a href="https://html.com" target="_blank">
                         <img src="assets/images/html.svg" alt="HTML Logo">
                     </a>
                 </div>
                 <div class="logo-item">
                     <span class="logo-title">CSS</span>
-                    <a href="https://css-tricks.com" target="_blank">
                         <img src="assets/images/css.svg" alt="CSS Logo">
                     </a>
                 </div>
                 <div class="logo-item">
                     <span class="logo-title">JS</span>
-                    <a href="https://javascript.com" target="_blank">
                         <img src="assets/images/js.svg" alt="JS Logo">
                     </a>
                 </div>
@@ -91,25 +89,34 @@
             <h1>Technologies I am Learning/Interested In</h1>
                 <div class="logo-item">
                     <span class="logo-title">Python</span>
-                    <a href="https://python.org" target="_blank">
                         <img src="assets/images/python.svg" alt="Python Logo">
                     </a>
                 </div>
                 <div class="logo-item">
                     <span class="logo-title">Java</span>
-                    <a href="https://java.com" target="_blank">
                         <img src="assets/images/java.svg" alt="Java Logo">
                     </a>
                 </div>
                 
                 <div class="logo-item">
                     <span class="logo-title">MySql</span>
-                    <a href="https://mysql.com" target="_blank">
                         <img src="assets/images/mysql.svg" alt="MySQL Logo">
                     </a>
                 </div>
         </center>
     </div>
+</div>
+
+<div class="newline">
+    <center>
+        <h1>Proficient in using Docs Software</h1>
+            <div class="logo-item">
+                <span class="logo-title">Confluence </span>
+                    <img src="assets/images/confluence.svg" alt="confluence documentation software Logo">
+                </a>
+            </div>
+    </center>
+</div>
 </div>
 
     <script src="assets/js/index.js"></script>
