--- a/about.html
+++ b/about.html
@@ -55,7 +55,7 @@
             <span class="icon">LinkedIn</span>
         </div>
         <div class="icon-container github-icon">
-            <a href="https://github.com/CODEw0CEAN" target="_blank">
+            <a href="https://github.com/codeiox" target="_blank">
                 <img src="assets/images/github (1).svg" alt="GitHub Logo">
             </a>
             <span class="icon">GitHub</span>
