Added Git and Github certificate

--- a/certificates.html
+++ b/certificates.html
@@ -18,7 +18,7 @@
         <a href="index.html">Home</a>
         <a href="certificates.html">Certificates</a>
         <a href="contact.html">Contact</a>
-        <a href="about.html">About</a> <!--Add linkdln-->
+        <a href="about.html">About</a> 
     </div>
 </div>
 
@@ -30,13 +30,6 @@
 
 <div class="Certificates-container">
     <div class="certificate">
-        <span class="title">Intro to Cloud Computing</span>
-        <img src="assets/certificates/Cloud.png" alt="certificate">
-        <a href="https://www.coursera.org/account/accomplishments/verify/1IWHCKSL8RW8" target="_blank">
-            <button class="btn" type="button">Verify</button>
-        </a>
-    </div>
-    <div class="certificate">
         <span class="title">Intro to DevOps</span>
         <img src="assets/certificates/DevOps.png" alt="certificate">
         <a href="https://www.coursera.org/account/accomplishments/verify/Y9T36FYI25UK" target="_blank">
@@ -44,22 +37,36 @@
         </a>
     </div>
     <div class="certificate">
+        <span class="title">Intro to Cloud Computing</span>
+        <img src="assets/certificates/Cloud.png" alt="Cloud computing certificate">
+        <a href="https://www.coursera.org/account/accomplishments/verify/1IWHCKSL8RW8" target="_blank">
+            <button class="btn" type="button">Verify</button>
+        </a>
+    </div>
+    <div class="certificate">
         <span class="title">Qt 6 Core</span>
-        <img src="assets/certificates/Qt.png" alt="certificate">
+        <img src="assets/certificates/Qt.png" alt=" Qt 6 core certificate">
         <a href="https://www.udemy.com/certificate/UC-8d5d5826-0b59-4607-8c46-2741fd548457/" target="_blank">
             <button class="btn" type="button">Verify</button>
         </a>
     </div> 
     <div class="certificate">
         <span class="title">Introduction to Software Engineering</span>
-        <img src="assets/certificates/SoftwareEngineering.png" alt="certificate">
+        <img src="assets/certificates/SoftwareEngineering.png" alt="Software Engineering certificate">
         <a href="https://www.coursera.org/account/accomplishments/verify/ERFEIRDT41HC" target="_blank">
             <button class="btn" type="button">Verify</button>
         </a>
     </div>  
     <div class="certificate">
+        <span class="title">Git and GitHub</span>
+        <img src="assets/certificates/GitandGithub.png" alt="git and github certificate">
+        <a href="https://www.coursera.org/account/accomplishments/verify/GLOSOM060X76" target="_blank">
+            <button class="btn" type="button">Verify</button>
+        </a>
+    </div> 
+    <div class="certificate">
         <span class="title">Technical Support Fundamentals</span>
-        <img src="assets/certificates/IT.png" alt="certificate">
+        <img src="assets/certificates/IT.png" alt=" IT support certificate">
         <a href="http://coursera.org/account/accomplishments/verify/Y2YMUMDHAXGV" target="_blank">
             <button class="btn" type="button">Verify</button>
         </a>
