Changed logo of website

--- a/certificates.html
+++ b/certificates.html
@@ -12,7 +12,7 @@
 <div class="navbar">
     <div class="logo">
         <a href="index.html">
-            <img src="assets/images/logo.png" alt="Logo"></a>
+            <img src="assets/images/logo1.png" alt="Logo"></a>
     </div>
     <div class="topnav">
         <a href="index.html">Home</a>
@@ -31,7 +31,7 @@
 <div class="Certificates-container">
     <div class="certificate">
         <span class="title">Intro to DevOps</span>
-        <img src="assets/certificates/DevOps.png" alt="certificate">
+        <img src="assets/certificates/DevOps.png" alt="DevOps certificate">
         <a href="https://www.coursera.org/account/accomplishments/verify/Y9T36FYI25UK" target="_blank">
             <button class="btn" type="button">Verify</button>
         </a>
