--- a/contact.html
+++ b/contact.html
@@ -12,7 +12,7 @@
 <div class="navbar">
     <div class="logo">
         <a href="index.html">
-            <img src="assets/images/logo.png" alt="Logo"></a>
+            <img src="assets/images/logo1.png" alt="Logo"></a>
     </div>
     <div class="topnav">
         <a href="index.html">Home</a>
