--- a/index.html
+++ b/index.html
@@ -6,13 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>My Portfolio</title>
+    <link rel="icon" type="image/x-icon" href="assets/images/logo1.png" />
     <link rel="stylesheet" href="assets/css/style.css">
 </head>
 <!--Content will go here-->
 <div class="navbar">
     <div class="logo">
         <a href="index.html">
-            <img src="assets/images/logo.png" alt="Logo"></a>
+            <img src="assets/images/logo1.png" alt="Logo"></a>
     </div>
     <div class="topnav">
         <a href="index.html">Home</a>
@@ -78,8 +79,8 @@
                     </a>
                 </div>
                 <div class="logo-item">
-                    <span class="logo-title">JS</span>
-                        <img src="assets/images/js.svg" alt="JS Logo">
+                    <span class="logo-title">Java Script</span>
+                        <img src="assets/images/js.svg" alt="Java Script Logo">
                     </a>
                 </div>
         </center>
